--- a/nicepage.css
+++ b/nicepage.css
@@ -38581,14 +38581,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #111111;
-            background-color: #ffbf00;
+            background-color: #feb908;
         }
 
         .u-button-style.u-custom-color-1,
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #ffbf00 !important;
+            background-color: #feb908 !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -38603,7 +38603,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #e6ac00 !important;
+            background-color: #eba901 !important;
         }
 
         .u-hover-custom-color-1:hover,
@@ -38628,11 +38628,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #ffbf00 !important;
+            background-color: #feb908 !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #ffbf00 !important;
+            color: #feb908 !important;
         }
 
         
@@ -38707,14 +38707,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
-            border-color: #ffbf00;
-            stroke: #ffbf00;
+            border-color: #feb908;
+            stroke: #feb908;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #ffbf00 !important;
-            color: #ffbf00 !important;
+            border-color: #feb908 !important;
+            color: #feb908 !important;
             background-color: transparent !important;
         }
 
@@ -38722,7 +38722,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-1:focus
         {
             border-color: transparent !important;
-            color: #e6ac00 !important;
+            color: #eba901 !important;
             background-color: transparent !important;
         }
 
@@ -38737,18 +38737,18 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
         {
-            color: #ffbf00 !important;
-            border-color: #ffbf00 !important;
+            color: #feb908 !important;
+            border-color: #feb908 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #ffbf00 !important;
+            border-color: #feb908 !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
         {
-            border-color: #e6ac00 !important;
+            border-color: #eba901 !important;
         }
         
         
@@ -38807,7 +38807,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #ffbf00 !important;
+            color: #feb908 !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -38819,7 +38819,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-1.active,
         a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"].active
         {
-            color: #e6ac00 !important;
+            color: #eba901 !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-1,
@@ -38846,7 +38846,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #ffbf00 !important;
+            color: #feb908 !important;
         }
 
         .u-text-custom-color-1 .u-svg-link,
@@ -38855,17 +38855,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 .u-svg-link,
         .u-text-hover-custom-color-1:focus .u-svg-link
         {
-            fill: #ffbf00;
+            fill: #feb908;
         }
 
         .u-link.u-text-custom-color-1:hover
         {
-            color: #e6ac00 !important;
+            color: #eba901 !important;
         }
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #ffbf00 !important;
+            color: #feb908 !important;
         }
         
         
