--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -43,7 +43,7 @@
 .u-section-1 .u-image-3 {
   width: 566px;
   height: 429px;
-  margin: -405px calc(((100% - 1140px) / 2) + -101px) 15px auto;
+  margin: -405px calc(((100% - 1140px) / 2) + -101px) 16px auto;
 }
 
 @media (max-width: 1199px) {
@@ -79,6 +79,7 @@
   .u-section-1 .u-image-3 {
     height: 430px;
     margin-right: calc(((100% - 940px) / 2) + -101px);
+    margin-bottom: 15px;
   }
 }
 
@@ -138,41 +139,145 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 365px;
+    min-height: 860px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 227px;
+    height: 195px;
+    margin-top: 18px;
   }
 
   .u-section-1 .u-image-2 {
-    margin-top: -721px;
-    margin-left: calc(((100% - 1140px) / 2) + 471px);
+    width: 117px;
+    height: 78px;
+    margin-top: -824px;
+    margin-left: calc(((100% - 340px) / 2) + -36px);
   }
 
   .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
     width: auto;
-    margin-top: 463px;
-    margin-left: calc(((100% - 1140px) / 2) + 400px);
-    margin-right: calc(((100% - 1140px) / 2) + 400px);
+    margin-top: 8px;
+    margin-left: 19px;
+    margin-right: 19px;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 1.75rem;
     width: auto;
-    margin-top: 10px;
-    margin-left: calc(((100% - 1140px) / 2) + 400px);
-    margin-right: calc(((100% - 1140px) / 2) + 400px);
+    margin-top: 12px;
+    margin-left: 19px;
+    margin-right: 19px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 24px;
-    margin-right: calc(((100% - 1140px) / 2) + 389px);
-    margin-left: auto;
+    font-size: 1.5rem;
+    margin-top: 27px;
+    margin-bottom: -230px;
+    margin-left: calc(((100% - 340px) / 2) + -31px);
+    padding: 5px 14px 7px;
   }
 
   .u-section-1 .u-image-3 {
     width: 340px;
     height: 258px;
-    margin-right: calc(((100% - 340px) / 2));
+    margin-top: -568px;
+    margin-right: auto;
+    margin-bottom: 60px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 608px;
+}
+
+.u-section-2 .u-text-1 {
+  font-size: 2.5rem;
+  line-height: 1.35;
+  font-weight: 700;
+  width: 308px;
+  margin: 38px auto 0;
+}
+
+.u-section-2 .u-line-1 {
+  width: 320px;
+  transform-origin: left center 0px;
+  border-style: solid;
+  margin: 23px auto 0;
+}
+
+.u-section-2 .u-text-2 {
+  font-size: 1.875rem;
+  line-height: 1.35;
+  margin: 47px 497px 0 73px;
+}
+
+.u-section-2 .u-text-3 {
+  font-size: 1.625rem;
+  line-height: 1.35;
+  margin: 23px 497px 0 73px;
+}
+
+.u-section-2 .u-btn-1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-image: none;
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 1.75rem;
+  animation-timing-function: ease;
+  margin: 23px auto 0 73px;
+  padding: 6px 42px;
+}
+
+.u-section-2 .u-image-1 {
+  width: 356px;
+  height: 409px;
+  margin: -336px 38px 43px auto;
+}
+
+@media (max-width: 1199px) {
+  .u-section-2 .u-text-2 {
+    margin-right: 370px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 370px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-text-2 {
+    margin-right: 150px;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 150px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-2 .u-text-2 {
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    margin-right: 0;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 590px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 340px;
+    height: 391px;
+    margin-right: 0;
   }
 }
