--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -19,7 +19,7 @@
   font-size: 2.5rem;
   line-height: 1.35;
   font-weight: 700;
-  margin: 15px calc(((100% - 1140px) / 2) + 434px) 0 calc(((100% - 1140px) / 2) + 74px);
+  margin: 15px calc(((100% - 1140px) / 2) + 386px) 0 calc(((100% - 1140px) / 2) + 74px);
 }
 
 .u-section-1 .u-text-2 {
@@ -107,7 +107,7 @@
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: -81px;
+    margin-top: -131px;
   }
 
   .u-section-1 .u-image-2 {
@@ -133,7 +133,6 @@
 
   .u-section-1 .u-btn-1 {
     font-size: 1.5rem;
-    margin-bottom: 36px;
     margin-left: calc(((100% - 720px) / 2));
     padding: 5px 8px;
   }
@@ -146,10 +145,6 @@
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-image-1 {
-    margin-top: 94px;
-  }
-
   .u-section-1 .u-image-2 {
     margin-top: -579px;
     margin-left: calc(((100% - 1140px) / 2) + 344px);
@@ -177,40 +172,40 @@
 
 @media (max-width: 575px) {
    .u-section-1 {
-    min-height: 475px;
+    min-height: 451px;
   }
 
   .u-section-1 .u-image-1 {
     height: 195px;
-    margin-top: -81px;
   }
 
   .u-section-1 .u-image-2 {
     width: 128px;
     height: 86px;
-    margin-top: 14px;
-    margin-left: calc(((100% - 340px) / 2) + -32px);
+    margin-top: 11px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
   .u-section-1 .u-text-1 {
     font-size: 1.625rem;
-    margin-top: 10px;
-    margin-right: calc(((100% - 340px) / 2) + 14px);
-    margin-left: calc(((100% - 340px) / 2) + -31px);
+    width: 340px;
+    margin-top: 9px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-2 {
+    font-size: 1.5rem;
+    width: 340px;
     margin-top: 10px;
-    margin-left: 19px;
-    margin-right: 19px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 23px;
-    margin-bottom: 38px;
-    margin-left: calc(((100% - 340px) / 2) + -31px);
-    padding-right: 14px;
-    padding-bottom: 7px;
+    margin-bottom: 33px;
+    margin-left: calc(((100% - 340px) / 2));
+    padding: 6px 11px 6px 10px;
   }
 
   .u-section-1 .u-image-3 {
