--- a/Página-Inicial.css
+++ b/Página-Inicial.css
@@ -12,14 +12,14 @@
 .u-section-1 .u-image-2 {
   width: 213px;
   height: 120px;
-  margin: -498px auto 0 calc(((100% - 1140px) / 2) + 50px);
+  margin: -499px auto 0 calc(((100% - 1140px) / 2) + 51px);
 }
 
 .u-section-1 .u-text-1 {
   font-size: 2.5rem;
   line-height: 1.35;
   font-weight: 700;
-  margin: 15px calc(((100% - 1140px) / 2) + 386px) 0 calc(((100% - 1140px) / 2) + 74px);
+  margin: 16px calc(((100% - 1140px) / 2) + 386px) 0 calc(((100% - 1140px) / 2) + 74px);
 }
 
 .u-section-1 .u-text-2 {
@@ -48,35 +48,35 @@
 
 @media (max-width: 1199px) {
    .u-section-1 {
-    min-height: 452px;
+    min-height: 471px;
   }
 
   .u-section-1 .u-image-1 {
     height: 423px;
-    margin-top: 18px;
+    margin-top: 7px;
   }
 
   .u-section-1 .u-image-2 {
     width: 166px;
     height: 87px;
-    margin-top: -387px;
-    margin-left: calc(((100% - 940px) / 2) + -24px);
+    margin-top: -402px;
+    margin-left: calc(((100% - 940px) / 2));
   }
 
   .u-section-1 .u-text-1 {
     font-size: 2.125rem;
     width: auto;
-    margin-top: 3px;
-    margin-right: calc(((100% - 940px) / 2) + 356px);
-    margin-left: calc(((100% - 940px) / 2));
+    margin-top: 12px;
+    margin-right: calc(((100% - 940px) / 2) + 333px);
+    margin-left: calc(((100% - 940px) / 2) + 23px);
   }
 
   .u-section-1 .u-text-2 {
     font-size: 1.75rem;
     width: auto;
-    margin-top: 7px;
-    margin-right: calc(((100% - 940px) / 2) + 397px);
-    margin-left: calc(((100% - 940px) / 2));
+    margin-top: 17px;
+    margin-right: calc(((100% - 940px) / 2) + 374px);
+    margin-left: calc(((100% - 940px) / 2) + 23px);
   }
 
   .u-section-1 .u-btn-1 {
@@ -86,16 +86,16 @@
     --animation-custom_in-opacity: 0;
     --animation-custom_in-rotate: 0deg;
     --animation-custom_in-scale: 1;
-    margin-top: 18px;
-    margin-left: calc(((100% - 940px) / 2));
+    margin-top: 30px;
+    margin-left: calc(((100% - 940px) / 2) + 23px);
     padding-right: 15px;
     padding-left: 14px;
   }
 
   .u-section-1 .u-image-3 {
-    width: 408px;
-    height: 348px;
-    margin-top: -368px;
+    width: 414px;
+    height: 349px;
+    margin-top: -355px;
     margin-right: calc(((100% - 940px) / 2) + -40px);
     margin-bottom: 49px;
   }
@@ -210,12 +210,16 @@
 
   .u-section-1 .u-image-3 {
     width: 340px;
-    height: 290px;
+    height: 287px;
     margin-top: -568px;
     margin-right: calc(((100% - 340px) / 2));
   }
-}.u-section-2 .u-sheet-1 {
-  min-height: 609px;
+} .u-section-2 {
+  background-image: none;
+}
+
+.u-section-2 .u-sheet-1 {
+  min-height: 591px;
 }
 
 .u-section-2 .u-text-1 {
@@ -223,26 +227,32 @@
   line-height: 1.35;
   font-weight: 700;
   width: 308px;
-  margin: 39px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-2 .u-line-1 {
   width: 320px;
   transform-origin: left center 0px;
   border-style: solid;
-  margin: 22px auto 0;
+  margin: 25px auto 0;
+}
+
+.u-section-2 .u-image-1 {
+  width: 356px;
+  height: 409px;
+  margin: 25px 31px 0 auto;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1.875rem;
   line-height: 1.35;
-  margin: 47px 497px 0 73px;
+  margin: -389px 467px 0 73px;
 }
 
 .u-section-2 .u-text-3 {
   font-size: 1.625rem;
   line-height: 1.35;
-  margin: 23px 497px 0 73px;
+  margin: 31px 497px 0 73px;
 }
 
 .u-section-2 .u-btn-1 {
@@ -253,23 +263,30 @@
   font-weight: 700;
   font-size: 1.75rem;
   animation-timing-function: ease;
-  margin: 23px auto 0 73px;
+  margin: 40px auto 60px 73px;
   padding: 6px 51px;
 }
 
-.u-section-2 .u-image-1 {
-  width: 356px;
-  height: 409px;
-  margin: -336px 38px 43px auto;
-}
-
 @media (max-width: 1199px) {
+  .u-section-2 .u-line-1 {
+    margin-top: 20px;
+  }
+
+  .u-section-2 .u-image-1 {
+    margin-top: 53px;
+    margin-right: 0;
+  }
+
   .u-section-2 .u-text-2 {
-    margin-right: 370px;
+    width: auto;
+    margin-top: -422px;
+    margin-right: 340px;
     margin-left: 0;
   }
 
   .u-section-2 .u-text-3 {
+    width: auto;
+    margin-top: 25px;
     margin-right: 370px;
     margin-left: 0;
   }
@@ -277,17 +294,11 @@
   .u-section-2 .u-btn-1 {
     margin-left: 0;
   }
-
-  .u-section-2 .u-image-1 {
-    margin-top: -332px;
-    margin-right: 0;
-    margin-bottom: 39px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-2 .u-text-2 {
-    margin-right: 150px;
+    margin-right: 120px;
   }
 
   .u-section-2 .u-text-3 {
@@ -296,16 +307,17 @@
 }
 
 @media (max-width: 767px) {
+  .u-section-2 .u-image-1 {
+    margin-top: 400px;
+  }
+
   .u-section-2 .u-text-2 {
+    margin-top: -764px;
     margin-right: 0;
   }
 
   .u-section-2 .u-text-3 {
     margin-right: 0;
-  }
-
-  .u-section-2 .u-image-1 {
-    margin-top: 20px;
   }
 }
 
@@ -327,15 +339,20 @@
     margin-top: 12px;
   }
 
+  .u-section-2 .u-image-1 {
+    height: 271px;
+    width: 256px;
+    margin-top: 237px;
+    margin-right: auto;
+  }
+
   .u-section-2 .u-text-2 {
     font-size: 1.375rem;
-    width: auto;
-    margin-top: 18px;
+    margin-top: -490px;
   }
 
   .u-section-2 .u-text-3 {
     font-size: 1.25rem;
-    width: auto;
     margin-top: 12px;
   }
 
@@ -343,19 +360,12 @@
     font-size: 1.5rem;
     margin-top: 305px;
     margin-left: auto;
+    margin-bottom: 40px;
     padding-right: 61px;
     padding-left: 59px;
   }
-
-  .u-section-2 .u-image-1 {
-    height: 271px;
-    width: 256px;
-    margin-top: -343px;
-    margin-right: auto;
-    margin-bottom: 60px;
-  }
 }.u-section-3 .u-sheet-1 {
-  min-height: 728px;
+  min-height: 616px;
 }
 
 .u-section-3 .u-text-1 {
@@ -363,14 +373,14 @@
   line-height: 1.35;
   font-weight: 700;
   width: 371px;
-  margin: 35px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-3 .u-line-1 {
   width: 320px;
   transform-origin: left center 0px;
   border-style: solid;
-  margin: 22px auto 0;
+  margin: 25px auto 0;
 }
 
 .u-section-3 .u-group-1 {
@@ -379,7 +389,7 @@
   background-image: none;
   min-height: 322px;
   height: auto;
-  margin: 97px auto 0 65px;
+  margin: 45px auto 0 65px;
 }
 
 .u-section-3 .u-container-layout-1 {
@@ -474,51 +484,113 @@
   font-weight: 700;
   font-size: 1.75rem;
   animation-timing-function: ease;
-  margin: 61px auto 60px;
+  margin: 36px auto 40px;
   padding: 6px 83px 6px 82px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-3 .u-text-1 {
-    margin-top: 63px;
+  .u-section-3 .u-sheet-1 {
+    min-height: 607px;
+  }
+
+  .u-section-3 .u-line-1 {
+    margin-top: 20px;
   }
 
   .u-section-3 .u-group-1 {
-    margin-top: 155px;
-    margin-left: 33px;
+    min-height: 318px;
+    margin-top: 40px;
+    margin-left: 11px;
     height: auto;
+  }
+
+  .u-section-3 .u-container-layout-1 {
+    padding-bottom: 16px;
+  }
+
+  .u-section-3 .u-image-1 {
+    margin-top: 7px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-text-2 {
     width: 197px;
-    margin-right: 69px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-3 {
+    width: auto;
+    margin-top: 30px;
   }
 
   .u-section-3 .u-group-2 {
-    margin-top: 20px;
-    margin-left: 291px;
+    min-height: 318px;
+    margin-top: -318px;
+    margin-left: 324px;
     height: auto;
+  }
+
+  .u-section-3 .u-container-layout-2 {
+    padding-top: 7px;
+    padding-bottom: 7px;
+  }
+
+  .u-section-3 .u-image-2 {
+    margin-left: auto;
   }
 
   .u-section-3 .u-text-4 {
     width: 197px;
-    margin-right: 69px;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-text-5 {
+    width: auto;
+    margin-top: 24px;
   }
 
   .u-section-3 .u-group-3 {
-    margin-left: 615px;
+    min-height: 318px;
+    margin-right: 0;
+    margin-left: auto;
     height: auto;
   }
 
+  .u-section-3 .u-container-layout-3 {
+    padding-top: 9px;
+    padding-bottom: 9px;
+  }
+
+  .u-section-3 .u-image-3 {
+    margin-left: auto;
+  }
+
   .u-section-3 .u-text-6 {
-    width: 197px;
-    margin-right: 69px;
+    width: auto;
+    margin-top: 15px;
+    margin-right: 6px;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-top: 24px;
+  }
+
+  .u-section-3 .u-btn-1 {
+    margin-top: 45px;
+    margin-bottom: 41px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-group-2 {
+    margin-top: 20px;
     margin-left: 181px;
+    margin-bottom: initial;
   }
 
   .u-section-3 .u-group-3 {
@@ -551,20 +623,21 @@
   .u-section-3 .u-group-2 {
     min-height: 338px;
     margin-top: 96px;
+    margin-bottom: 0;
     margin-left: 47px;
   }
 
   .u-section-3 .u-group-3 {
     min-height: 338px;
     margin-top: 96px;
-    margin-left: 47px;
+    margin-left: auto;
   }
 } .u-section-4 {
   background-image: none;
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 412px;
+  min-height: 481px;
 }
 
 .u-section-4 .u-text-1 {
@@ -572,14 +645,14 @@
   line-height: 1.35;
   font-weight: 700;
   width: 548px;
-  margin: 19px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-4 .u-line-1 {
   width: 320px;
   transform-origin: left center 0px;
   border-style: solid;
-  margin: 22px auto 0;
+  margin: 25px auto 0;
 }
 
 .u-section-4 .u-group-1 {
@@ -587,7 +660,7 @@
   background-image: none;
   min-height: 186px;
   height: auto;
-  margin: 56px auto 0 793px;
+  margin: 45px auto 0 793px;
 }
 
 .u-section-4 .u-container-layout-1 {
@@ -637,7 +710,7 @@
   background-image: none;
   min-height: 186px;
   height: auto;
-  margin: -186px auto 60px;
+  margin: -186px auto 0;
 }
 
 .u-section-4 .u-container-layout-3 {
@@ -657,39 +730,102 @@
   margin: 24px 0 0;
 }
 
+.u-section-4 .u-btn-1 {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background-image: none;
+  font-family: Poppins;
+  font-weight: 700;
+  font-size: 1.75rem;
+  animation-timing-function: ease;
+  margin: 40px auto 41px;
+  padding: 6px 83px 6px 82px;
+}
+
 @media (max-width: 1199px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 497px;
+  }
+
   .u-section-4 .u-text-1 {
-    width: 371px;
+    width: 572px;
+  }
+
+  .u-section-4 .u-line-1 {
+    margin-top: 20px;
   }
 
   .u-section-4 .u-group-1 {
-    margin-left: 593px;
+    width: 300px;
+    min-height: 192px;
+    margin-top: 47px;
+    margin-right: 0;
+    margin-left: auto;
     height: auto;
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-top: 0;
+  }
+
+  .u-section-4 .u-text-2 {
+    width: auto;
+    margin-top: 16px;
   }
 
   .u-section-4 .u-group-2 {
+    width: 300px;
+    min-height: 192px;
+    margin-top: -192px;
     height: auto;
+  }
+
+  .u-section-4 .u-image-2 {
+    margin-top: 0;
+  }
+
+  .u-section-4 .u-text-3 {
+    width: auto;
+    margin-top: 16px;
   }
 
   .u-section-4 .u-group-3 {
+    width: 300px;
+    min-height: 192px;
+    margin-top: -192px;
     height: auto;
   }
-}
 
-@media (max-width: 991px) {
-  .u-section-4 .u-group-1 {
-    margin-left: 373px;
+  .u-section-4 .u-container-layout-3 {
+    padding-bottom: 0;
+  }
+
+  .u-section-4 .u-image-3 {
+    margin-top: 0;
+  }
+
+  .u-section-4 .u-text-4 {
+    width: auto;
+    margin-top: 16px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-bottom: 55px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-group-1 {
-    margin-left: 193px;
+  .u-section-4 .u-text-1 {
+    width: 540px;
   }
 
   .u-section-4 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-4 .u-group-2 {
+    margin-top: 20px;
   }
 
   .u-section-4 .u-container-layout-2 {
@@ -710,19 +846,14 @@
   }
 
   .u-section-4 .u-group-1 {
-    width: 340px;
     margin-top: 22px;
-    margin-left: 0;
-    margin-right: 0;
   }
 
   .u-section-4 .u-group-2 {
-    width: 340px;
     margin-right: 0;
   }
 
   .u-section-4 .u-group-3 {
-    width: 340px;
     margin-left: 0;
     margin-right: 0;
   }
