--- a/caoportado.css
+++ b/caoportado.css
@@ -103,7 +103,7 @@
 
 @media (max-width: 991px) {
    .u-section-1 {
-    min-height: 429px;
+    min-height: 422px;
   }
 
   .u-section-1 .u-image-1 {
@@ -111,23 +111,23 @@
   }
 
   .u-section-1 .u-image-2 {
-    width: 172px;
+    width: 135px;
     height: 89px;
-    margin-top: 31px;
-    margin-left: calc(((100% - 720px) / 2) + -18px);
+    margin-top: 11px;
+    margin-left: calc(((100% - 720px) / 2));
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1.875rem;
-    margin-top: 14px;
-    margin-right: calc(((100% - 720px) / 2) + 212px);
-    margin-left: calc(((100% - 720px) / 2) + 7px);
+    font-size: 1.75rem;
+    margin-top: 15px;
+    margin-right: calc(((100% - 720px) / 2) + 206px);
+    margin-left: calc(((100% - 720px) / 2) + 5px);
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.625rem;
-    margin-top: 9px;
-    margin-right: calc(((100% - 720px) / 2) + 222px);
+    font-size: 1.5rem;
+    margin-top: 11px;
+    margin-right: calc(((100% - 720px) / 2) + 282px);
     margin-left: calc(((100% - 720px) / 2));
   }
 
@@ -138,9 +138,11 @@
   }
 
   .u-section-1 .u-image-3 {
-    margin-top: -378px;
-    margin-right: calc(((100% - 720px) / 2) + -37px);
-    margin-bottom: 60px;
+    width: 328px;
+    height: 307px;
+    margin-top: -270px;
+    margin-right: calc(((100% - 720px) / 2));
+    margin-bottom: 12px;
   }
 }
 
@@ -166,7 +168,7 @@
   }
 
   .u-section-1 .u-image-3 {
-    margin-right: calc(((100% - 540px) / 2) + -37px);
+    margin-right: calc(((100% - 540px) / 2));
   }
 }
 
@@ -195,9 +197,7 @@
   }
 
   .u-section-1 .u-text-2 {
-    font-size: 1.5rem;
     width: 340px;
-    margin-top: 11px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -209,8 +209,6 @@
   }
 
   .u-section-1 .u-image-3 {
-    width: 340px;
-    height: 287px;
     margin-top: -568px;
     margin-right: calc(((100% - 340px) / 2));
   }
@@ -219,40 +217,39 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 591px;
+  min-height: 579px;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 2.5rem;
   line-height: 1.35;
   font-weight: 700;
-  width: 308px;
-  margin: 30px auto 0;
+  margin: 37px 437px 0 395px;
 }
 
 .u-section-2 .u-line-1 {
   width: 320px;
   transform-origin: left center 0px;
   border-style: solid;
-  margin: 25px auto 0;
+  margin: 25px auto 0 389px;
 }
 
 .u-section-2 .u-image-1 {
   width: 356px;
   height: 409px;
-  margin: 25px 31px 0 auto;
+  margin: 25px auto 0 732px;
 }
 
 .u-section-2 .u-text-2 {
   font-size: 1.875rem;
   line-height: 1.35;
-  margin: -389px 467px 0 73px;
+  margin: -389px 488px 0 52px;
 }
 
 .u-section-2 .u-text-3 {
   font-size: 1.625rem;
   line-height: 1.35;
-  margin: 31px 497px 0 73px;
+  margin: 31px 518px 0 52px;
 }
 
 .u-section-2 .u-btn-1 {
@@ -263,31 +260,84 @@
   font-weight: 700;
   font-size: 1.75rem;
   animation-timing-function: ease;
-  margin: 40px auto 60px 73px;
+  margin: 40px auto 60px 52px;
   padding: 6px 51px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 561px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: 308px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .u-section-2 .u-line-1 {
+    width: 300px;
+    height: 4px;
     margin-top: 20px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-image-1 {
-    margin-top: 53px;
-    margin-right: 0;
+    width: 328px;
+    height: 389px;
+    margin-top: 29px;
+    margin-right: 15px;
+    margin-left: auto;
   }
 
   .u-section-2 .u-text-2 {
     width: auto;
-    margin-top: -422px;
-    margin-right: 340px;
-    margin-left: 0;
+    margin-top: -377px;
+    margin-right: 320px;
+    margin-left: 20px;
   }
 
   .u-section-2 .u-text-3 {
     width: auto;
-    margin-top: 25px;
-    margin-right: 370px;
+    margin-top: 18px;
+    margin-right: 350px;
+    margin-left: 20px;
+  }
+
+  .u-section-2 .u-btn-1 {
+    margin-top: 34px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 541px;
+  }
+
+  .u-section-2 .u-line-1 {
+    margin-top: 15px;
+  }
+
+  .u-section-2 .u-image-1 {
+    width: 256px;
+    height: 393px;
+    margin-top: 30px;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    font-size: 1.75rem;
+    margin-top: -384px;
+    margin-right: 249px;
+    margin-left: 0;
+  }
+
+  .u-section-2 .u-text-3 {
+    font-size: 1.5rem;
+    margin-top: 14px;
+    margin-right: 249px;
     margin-left: 0;
   }
 
@@ -296,76 +346,63 @@
   }
 }
 
-@media (max-width: 991px) {
-  .u-section-2 .u-text-2 {
-    margin-right: 120px;
-  }
-
-  .u-section-2 .u-text-3 {
-    margin-right: 150px;
-  }
-}
-
 @media (max-width: 767px) {
-  .u-section-2 .u-image-1 {
-    margin-top: 400px;
-  }
-
   .u-section-2 .u-text-2 {
-    margin-top: -764px;
-    margin-right: 0;
+    margin-top: 20px;
+    margin-right: 69px;
+    margin-bottom: initial;
   }
 
   .u-section-2 .u-text-3 {
-    margin-right: 0;
+    margin-right: 69px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-2 .u-sheet-1 {
-    min-height: 699px;
+    min-height: 683px;
   }
 
   .u-section-2 .u-text-1 {
     font-size: 1.875rem;
     width: auto;
-    margin-top: 15px;
     margin-left: 16px;
     margin-right: 16px;
   }
 
   .u-section-2 .u-line-1 {
-    width: 172px;
-    margin-top: 12px;
+    width: 180px;
   }
 
   .u-section-2 .u-image-1 {
     height: 271px;
-    width: 256px;
-    margin-top: 237px;
     margin-right: auto;
   }
 
   .u-section-2 .u-text-2 {
     font-size: 1.375rem;
-    margin-top: -490px;
+    margin-top: -384px;
+    margin-right: 0;
+    margin-bottom: 0;
   }
 
   .u-section-2 .u-text-3 {
     font-size: 1.25rem;
-    margin-top: 12px;
+    margin-right: 0;
   }
 
   .u-section-2 .u-btn-1 {
     font-size: 1.5rem;
-    margin-top: 305px;
     margin-left: auto;
-    margin-bottom: 40px;
     padding-right: 61px;
     padding-left: 59px;
   }
-}.u-section-3 .u-sheet-1 {
-  min-height: 616px;
+} .u-section-3 {
+  background-image: none;
+}
+
+.u-section-3 .u-sheet-1 {
+  min-height: 632px;
 }
 
 .u-section-3 .u-text-1 {
@@ -373,7 +410,7 @@
   line-height: 1.35;
   font-weight: 700;
   width: 371px;
-  margin: 30px auto 0;
+  margin: 43px auto 0;
 }
 
 .u-section-3 .u-line-1 {
@@ -389,7 +426,7 @@
   background-image: none;
   min-height: 322px;
   height: auto;
-  margin: 45px auto 0 65px;
+  margin: 48px auto 0 65px;
 }
 
 .u-section-3 .u-container-layout-1 {
@@ -420,7 +457,7 @@
   background-image: none;
   min-height: 322px;
   height: auto;
-  margin: -322px auto 0;
+  margin: -324px auto 0;
 }
 
 .u-section-3 .u-container-layout-2 {
@@ -451,7 +488,7 @@
   background-image: none;
   min-height: 322px;
   height: auto;
-  margin: -318px auto 0 783px;
+  margin: -318px auto 0 782px;
 }
 
 .u-section-3 .u-container-layout-3 {
@@ -484,22 +521,28 @@
   font-weight: 700;
   font-size: 1.75rem;
   animation-timing-function: ease;
-  margin: 36px auto 40px;
+  margin: 36px auto 43px;
   padding: 6px 83px 6px 82px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 607px;
+    min-height: 621px;
+  }
+
+  .u-section-3 .u-text-1 {
+    margin-top: 30px;
   }
 
   .u-section-3 .u-line-1 {
+    width: 300px;
+    height: 4px;
     margin-top: 20px;
   }
 
   .u-section-3 .u-group-1 {
     min-height: 318px;
-    margin-top: 40px;
+    margin-top: 66px;
     margin-left: 11px;
     height: auto;
   }
@@ -527,7 +570,6 @@
 
   .u-section-3 .u-group-2 {
     min-height: 318px;
-    margin-top: -318px;
     margin-left: 324px;
     height: auto;
   }
@@ -579,23 +621,37 @@
     width: auto;
     margin-top: 24px;
   }
-
-  .u-section-3 .u-btn-1 {
-    margin-top: 45px;
-    margin-bottom: 41px;
-  }
 }
 
 @media (max-width: 991px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1282px;
+  }
+
+  .u-section-3 .u-line-1 {
+    margin-top: 15px;
+  }
+
+  .u-section-3 .u-group-1 {
+    margin-top: 35px;
+    margin-left: auto;
+  }
+
   .u-section-3 .u-group-2 {
-    margin-top: 20px;
-    margin-left: 181px;
-    margin-bottom: initial;
+    margin-top: 30px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-group-3 {
-    margin-top: 20px;
-    margin-left: 395px;
+    margin-top: 30px;
+    margin-right: auto;
+  }
+
+  .u-section-3 .u-btn-1 {
+    margin-top: 30px;
+    margin-bottom: 44px;
+    padding-left: 51px;
+    padding-right: 51px;
   }
 }
 
@@ -610,34 +666,42 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 .u-sheet-1 {
+    min-height: 1305px;
+  }
+
   .u-section-3 .u-text-1 {
-    margin-top: 724px;
-    width: 340px;
+    font-size: 1.875rem;
+    width: auto;
+  }
+
+  .u-section-3 .u-line-1 {
+    width: 180px;
   }
 
   .u-section-3 .u-group-1 {
     min-height: 338px;
-    margin-top: -709px;
   }
 
   .u-section-3 .u-group-2 {
     min-height: 338px;
-    margin-top: 96px;
-    margin-bottom: 0;
-    margin-left: 47px;
+    margin-left: auto;
   }
 
   .u-section-3 .u-group-3 {
     min-height: 338px;
-    margin-top: 96px;
     margin-left: auto;
+  }
+
+  .u-section-3 .u-btn-1 {
+    padding: 3px 49px;
   }
 } .u-section-4 {
   background-image: none;
 }
 
 .u-section-4 .u-sheet-1 {
-  min-height: 481px;
+  min-height: 482px;
 }
 
 .u-section-4 .u-text-1 {
@@ -645,7 +709,7 @@
   line-height: 1.35;
   font-weight: 700;
   width: 548px;
-  margin: 30px auto 0;
+  margin: 33px auto 0;
 }
 
 .u-section-4 .u-line-1 {
@@ -738,13 +802,13 @@
   font-weight: 700;
   font-size: 1.75rem;
   animation-timing-function: ease;
-  margin: 40px auto 41px;
+  margin: 40px auto 38px;
   padding: 6px 83px 6px 82px;
 }
 
 @media (max-width: 1199px) {
   .u-section-4 .u-sheet-1 {
-    min-height: 497px;
+    min-height: 501px;
   }
 
   .u-section-4 .u-text-1 {
@@ -752,6 +816,8 @@
   }
 
   .u-section-4 .u-line-1 {
+    width: 300px;
+    height: 4px;
     margin-top: 20px;
   }
 
@@ -814,9 +880,48 @@
   }
 }
 
+@media (max-width: 991px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 912px;
+  }
+
+  .u-section-4 .u-text-1 {
+    width: auto;
+    margin-left: 74px;
+    margin-right: 74px;
+  }
+
+  .u-section-4 .u-line-1 {
+    margin-top: 15px;
+    margin-left: 210px;
+  }
+
+  .u-section-4 .u-group-1 {
+    margin-top: 479px;
+    margin-right: auto;
+  }
+
+  .u-section-4 .u-group-2 {
+    margin-top: -636px;
+    margin-left: auto;
+  }
+
+  .u-section-4 .u-group-3 {
+    margin-top: 30px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 257px;
+    margin-bottom: 44px;
+    padding-left: 51px;
+    padding-right: 51px;
+  }
+}
+
 @media (max-width: 767px) {
   .u-section-4 .u-text-1 {
-    width: 540px;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-4 .u-container-layout-1 {
@@ -840,21 +945,39 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-4 .u-sheet-1 {
+    min-height: 921px;
+  }
+
   .u-section-4 .u-text-1 {
+    font-size: 1.875rem;
     margin-top: 20px;
-    width: 340px;
+  }
+
+  .u-section-4 .u-line-1 {
+    width: 180px;
+    margin-left: 40px;
   }
 
   .u-section-4 .u-group-1 {
-    margin-top: 22px;
+    margin-top: 30px;
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-top: 27px;
   }
 
   .u-section-4 .u-group-2 {
-    margin-right: 0;
+    margin-top: 35px;
   }
 
   .u-section-4 .u-group-3 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 35px;
+  }
+
+  .u-section-4 .u-btn-1 {
+    margin-top: 35px;
+    margin-bottom: 36px;
+    padding: 3px 49px;
   }
 }
