--- a/nicepage.css
+++ b/nicepage.css
@@ -38581,14 +38581,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-1 tr:nth-child(even)
         {
             color: #111111;
-            background-color: #feb908;
+            background-color: #ffc52f;
         }
 
         .u-button-style.u-custom-color-1,
         .u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #feb908 !important;
+            background-color: #ffc52f !important;
         }
 
         .u-button-style.u-custom-color-1:hover,
@@ -38603,7 +38603,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #eba901 !important;
+            background-color: #ffbd11 !important;
         }
 
         .u-hover-custom-color-1:hover,
@@ -38628,11 +38628,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-1[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #feb908 !important;
+            background-color: #ffc52f !important;
         }
 
         a.u-link.u-hover-custom-color-1:hover {
-            color: #feb908 !important;
+            color: #ffc52f !important;
         }
 
         
@@ -38773,14 +38773,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-1,
         .u-separator-custom-color-1:after
         {
-            border-color: #feb908;
-            stroke: #feb908;
+            border-color: #ffc52f;
+            stroke: #ffc52f;
         }
 
         .u-button-style.u-border-custom-color-1
         {
-            border-color: #feb908 !important;
-            color: #feb908 !important;
+            border-color: #ffc52f !important;
+            color: #ffc52f !important;
             background-color: transparent !important;
         }
 
@@ -38788,7 +38788,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-1:focus
         {
             border-color: transparent !important;
-            color: #eba901 !important;
+            color: #ffbd11 !important;
             background-color: transparent !important;
         }
 
@@ -38803,18 +38803,18 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-1,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-1
         {
-            color: #feb908 !important;
-            border-color: #feb908 !important;
+            color: #ffc52f !important;
+            border-color: #ffc52f !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]
         {
-            border-color: #feb908 !important;
+            border-color: #ffc52f !important;
         }
 
         .u-link.u-border-custom-color-1[class*="u-border-"]:hover
         {
-            border-color: #eba901 !important;
+            border-color: #ffbd11 !important;
         }
         
         
@@ -38921,7 +38921,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-1,
         a.u-button-style.u-text-custom-color-1[class*="u-border-"]
         {
-            color: #feb908 !important;
+            color: #ffc52f !important;
         }
 
         a.u-button-style.u-text-custom-color-1:hover,
@@ -38933,7 +38933,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-1.active,
         a.u-button-style.u-button-style.u-text-custom-color-1[class*="u-border-"].active
         {
-            color: #eba901 !important;
+            color: #ffbd11 !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-1,
@@ -38960,7 +38960,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-1 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-1 .u-nav-link.active
         {
-            color: #feb908 !important;
+            color: #ffc52f !important;
         }
 
         .u-text-custom-color-1 .u-svg-link,
@@ -38969,17 +38969,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-1 .u-svg-link,
         .u-text-hover-custom-color-1:focus .u-svg-link
         {
-            fill: #feb908;
+            fill: #ffc52f;
         }
 
         .u-link.u-text-custom-color-1:hover
         {
-            color: #eba901 !important;
+            color: #ffbd11 !important;
         }
 
         a.u-link.u-text-hover-custom-color-1:hover
         {
-            color: #feb908 !important;
+            color: #ffc52f !important;
         }
         
         
