--- a/nicepage.css
+++ b/nicepage.css
@@ -38713,14 +38713,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-table-alt-custom-color-3 tr:nth-child(even)
         {
             color: #111111;
-            background-color: #fbfbfb;
+            background-color: #fdfdfd;
         }
 
         .u-button-style.u-custom-color-3,
         .u-button-style.u-custom-color-3[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #fbfbfb !important;
+            background-color: #fdfdfd !important;
         }
 
         .u-button-style.u-custom-color-3:hover,
@@ -38735,7 +38735,7 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > .u-button-style.u-button-style.u-custom-color-3[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #e2e2e2 !important;
+            background-color: #e4e4e4 !important;
         }
 
         .u-hover-custom-color-3:hover,
@@ -38760,11 +38760,11 @@ a.u-link.u-text-hover-grey-90:hover {
         li.active > a.u-button-style.u-button-style.u-active-custom-color-3[class*="u-border-"]
         {
             color: #111111 !important;
-            background-color: #fbfbfb !important;
+            background-color: #fdfdfd !important;
         }
 
         a.u-link.u-hover-custom-color-3:hover {
-            color: #fbfbfb !important;
+            color: #fdfdfd !important;
         }
 
         
@@ -38935,14 +38935,14 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-border-custom-color-3,
         .u-separator-custom-color-3:after
         {
-            border-color: #fbfbfb;
-            stroke: #fbfbfb;
+            border-color: #fdfdfd;
+            stroke: #fdfdfd;
         }
 
         .u-button-style.u-border-custom-color-3
         {
-            border-color: #fbfbfb !important;
-            color: #fbfbfb !important;
+            border-color: #fdfdfd !important;
+            color: #fdfdfd !important;
             background-color: transparent !important;
         }
 
@@ -38950,7 +38950,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-border-custom-color-3:focus
         {
             border-color: transparent !important;
-            color: #e2e2e2 !important;
+            color: #e4e4e4 !important;
             background-color: transparent !important;
         }
 
@@ -38965,18 +38965,18 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.active > .u-border-active-custom-color-3,
         li.active > a.u-button-style.u-button-style.u-border-active-custom-color-3
         {
-            color: #fbfbfb !important;
-            border-color: #fbfbfb !important;
+            color: #fdfdfd !important;
+            border-color: #fdfdfd !important;
         }
 
         .u-link.u-border-custom-color-3[class*="u-border-"]
         {
-            border-color: #fbfbfb !important;
+            border-color: #fdfdfd !important;
         }
 
         .u-link.u-border-custom-color-3[class*="u-border-"]:hover
         {
-            border-color: #e2e2e2 !important;
+            border-color: #e4e4e4 !important;
         }
         
         
@@ -39171,7 +39171,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-text-custom-color-3,
         a.u-button-style.u-text-custom-color-3[class*="u-border-"]
         {
-            color: #fbfbfb !important;
+            color: #fdfdfd !important;
         }
 
         a.u-button-style.u-text-custom-color-3:hover,
@@ -39183,7 +39183,7 @@ a.u-link.u-text-hover-grey-90:hover {
         a.u-button-style.u-button-style.u-text-custom-color-3.active,
         a.u-button-style.u-button-style.u-text-custom-color-3[class*="u-border-"].active
         {
-            color: #e2e2e2 !important;
+            color: #e4e4e4 !important;
         }
 
         a.u-button-style:hover > .u-text-hover-custom-color-3,
@@ -39210,7 +39210,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-popupmenu-items.u-text-hover-custom-color-3 .u-nav-link:hover,
         .u-popupmenu-items.u-popupmenu-items.u-text-active-custom-color-3 .u-nav-link.active
         {
-            color: #fbfbfb !important;
+            color: #fdfdfd !important;
         }
 
         .u-text-custom-color-3 .u-svg-link,
@@ -39219,17 +39219,17 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-button-style.u-button-style.active > .u-text-active-custom-color-3 .u-svg-link,
         .u-text-hover-custom-color-3:focus .u-svg-link
         {
-            fill: #fbfbfb;
+            fill: #fdfdfd;
         }
 
         .u-link.u-text-custom-color-3:hover
         {
-            color: #e2e2e2 !important;
+            color: #e4e4e4 !important;
         }
 
         a.u-link.u-text-hover-custom-color-3:hover
         {
-            color: #fbfbfb !important;
+            color: #fdfdfd !important;
         }
         
         
@@ -39717,19 +39717,20 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 207px;
+  min-height: 189px;
 }
 
 .u-footer .u-image-1 {
-  width: 130px;
-  height: 79px;
-  margin: 22px auto 0;
+  width: 136px;
+  height: 77px;
+  margin: 14px auto 0;
 }
 
 .u-footer .u-text-1 {
   font-size: 0.75rem;
   line-height: 1.35;
-  margin: 19px 10px 21px;
+  font-weight: 400;
+  margin: 20px 10px 14px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-text-1 {
